<resources>
    <string name="app_name">Dairy Farm App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to Poultry Farm System</string>
    <string name="description">Your Ultimate Poultry Farm Companion!Track, manage, and optimize your Poultry operations effortlessly. From Eggs production to Birds health, P.F.S ensures your farm thrives with precision and ease.</string>
    <string name="niceTxt">Nice Quality</string>
    <string name="echoTxt">Echo Friendly</string>
    <string name="profTxt">Professionalism</string>
    <string name="start">Start</string>
    <string name="regText">Let\'s Register</string>
    <string name="regDesc">Already have an account? Login.</string>
    <string name="fname">First name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="loginText">Let\'s Login</string>
    <string name="login">Don\'t have an account? Register.</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="txtLogin">Login</string>
    <string name="emailPrompt">Enter your email :</string>
    <string name="passPrompt">Enter New Password :</string>
    <string name="changePass">Change Password</string>
    <string name="update">Update Your Password</string>
    <string name="admin">Admin Dashboard</string>
    <string name="cowsList">Cows\' Details</string>
    <string name="milkProd">Milk Production</string>
    <string name="health">Poultry Health</string>
    <string name="cowBreeding">Cows\' Breeding</string>
    <string name="finances">Finances Report</string>
    <string name="required">Required.</string>
    <string name="name">Number of Layers birds(eg 120)</string>
    <string name="earTag">Ear Tag(eg C0015)</string>
    <string name="color">Cow Color(eg Brown)</string>
    <string name="breed">Cow Breed(eg Freshian)</string>
    <string name="dob">Date of Birth(YY/MM/DD)</string>
    <string name="age">Cow Age(in Months)</string>
    <string name="wat">Weight at Birth(in Kg)</string>
    <string name="save">Save</string>
    <string name="am">A.M Milk(in Litres)</string>
    <string name="noon">Noon Milk(in Litres)</string>
    <string name="pm">P.M Milk(in Litres)</string>
    <string name="total">Total Milk(in Litres)</string>
    <string name="date">Date(YY/MM/DD)</string>
    <string name="event">Event Occurrence(Day)</string>
    <string name="diagnosis">Diagnosis(eg Botulism)</string>
    <string name="treat">Treatment(eg Injection)</string>
    <string name="cost">Cost of Treatment(in KSH)</string>
    <string name="vetName">Veterinary Name(eg John Doe)</string>
    <string name="breedDate">Breeding Date(YY/MM/DD)</string>
    <string name="pDate">Pregnancy Date(YY/MM/DD)</string>
    <string name="calved">Date Calved(YY/MM/DD)</string>
    <string name="usage">Usage Date(YY/MM/DD)</string>
    <string name="purpose">Expenditure (purpose money spent on)</string>
    <string name="amount">Total Expenses Used(in KSH)</string>
    <string name="eggs">Eggs Sales</string>
    <string name="sell">Selling Date(YY/MM/DD)</string>
    <string name="cName">Client Name(eg John Doe)</string>
    <string name="phone">Client Phone(eg 0712345678)</string>
    <string name="quantity">Quantity(per tray)</string>
    <string name="price">Price(in KSH per tray)</string>
    <string name="totalAmount">Total Amount(in KSH)</string>
    <string name="income">Total Income(in KSH)</string>
    <string name="loginAs">Login as :</string>
    <string name="asAdmin">Admin</string>
    <string name="asEmployee">Employee</string>
    <string name="meat">Meat Sales</string>
    <string name="quantityM">Chicken size(full,half,quarter)</string>
    <string name="priceM">Chicken Price(full,half,quarter)</string>
    <string name="employee">Employee Dashboard</string>
    <string name="eggsSale">Eggs Sales</string>
    <string name="meatSales">Chicken Sales</string>
    <string name="poultryDetails">Poultry Details</string>
    <string name="poultry">Poultry Details</string>
    <string name="poultryProd">Poultry Production</string>
    <string name="foodM">Poultry Feeding</string>
    <string name="broilers">Number of Broiler birds(eg 120)</string>
    <string name="tBirds">Total number of Birds(eg 240)</string>
    <string name="doa">Date of Acquisition(YY/MM/DD)</string>
    <string name="toa">Type of Acquisition(Purchased,Hatched)</string>
    <string name="coa">Cost of Acquisition(in KSH)</string>
    <string name="eggsProd">Poultry Production</string>
    <string name="type">Collection Area(flock or whole farm)</string>
    <string name="cDate">Collection Date(YY/MM/DD)</string>
    <string name="eggsCollected">Number of Eggs Collected(eg. 120)</string>
    <string name="goodE">Number of Good Eggs(eg. 120)</string>
    <string name="brokenE">Number of Broken Eggs(eg. 120)</string>
    <string name="totalEggs">Total Trays of Eggs collected(eg. 120)</string>
    <string name="involved">Category affected(whole farm or flock)</string>
    <string name="diseaseType">Disease name(eg. Fowl pot)</string>
    <string name="vaccine">Name of Vaccine used</string>
    <string name="affected">Number of Birds affected(eg. 120)</string>
    <string name="feeding">Poultry Feeding</string>
    <string name="cFeed">Category Fed(whole farm or flock)</string>
    <string name="feedT">Type of Feed(eg. Chicken Mash)</string>
    <string name="feedQ">Total amount of Feed(eg. 700g)</string>
    <string name="feedC">Cost of Feeds(in KSH)</string>
    <string name="purchased">Date of Feed Purchase(YY/MM/DD)</string>
    <string name="batchName">Batch Name</string>
    <string name="Vac">Vaccination or medication</string>
    <string name="feedAm">Feed in Am(eg 150g)</string>
    <string name="feedNoon">Feed in Noon(eg 150g)</string>
    <string name="feedPm">Feed in PM(eg 150g)</string>
    <string name="feedPerson">Served by(eg John)</string>
    <string name="batchP">Batch Name</string>
    <string name="meatP">Meat Production in Kg</string>
    <string name="personWork">Served by(eg John)</string>
    <string name="meatTime">Time produced(Am,Noon or Pm)</string>
    <string name="med">Medical Expenses(eg 4500)</string>
    <string name="feeds">Feeds Expenses(eg 4500)</string>
    <string name="labour">Labour Expenses(eg 4500)</string>
    <string name="maintenance">Maintenance Expenses(eg 4500)</string>
    <string name="worker">Employee Details</string>
    <string name="employeeDetails">Employee Details</string>
    <string name="arriveTime">Arrival Time(eg 0800hrs)</string>
    <string name="employeeId">Employee Id(eg johnDoe512)</string>
    <string name="activities">Activities Done(eg Cleaning)</string>
    <string name="gender">Female or Male</string>
    <string name="workerName">Employee Name(eg John Doe)</string>
    <string name="role">Employee role</string>
    <string name="timeOut">Depature Time(eg 1700hrs)</string>
    <string name="databases">View Database</string>
    <string name="db">Databases</string>
    <string name="poultryProdDb">Poultry Production DB</string>
    <string name="poultryHealth">Poultry Health DB</string>
    <string name="poultryFeeding">Poultry Feeding DB</string>
    <string name="poultryFinances">Poultry Finances DB</string>
    <string name="poultryEggsSale">Poultry Eggs Sale DB</string>
    <string name="poultryChickenSales">Chicken Sales DB</string>
    <string name="employeeDb">Employee Details DB</string>
    <string name="poultryDetailsDB">Poultry Details DB</string>
    <string name="feedingDb">Feeding Database</string>
    <string name="productionDb">Production Database</string>
    <string name="healthDb">Health Database</string>
    <string name="poultryDb">Poultry Database</string>
    <string name="financesDb">Finances Database</string>
    <string name="eggsDb">Eggs Sales Database</string>
    <string name="chickenDb">Chicken Sales Database</string>
    <string name="employeeData">Employee Database</string>
    <string name="no_of_layers_birds">No. of Layers birds : </string>
    <string name="no_of_boiler_birds">No. of Boiler birds : </string>
    <string name="date_of_acquisition">Date of Acquisition : </string>
    <string name="total_birds">Total Birds :</string>
    <string name="acquisition_type">Acquisition type :</string>
    <string name="acquisition_cost">Acquisition cost :</string>
    <string name="batch_name">Batch Name :</string>
    <string name="meat_production">Meat Production :</string>
    <string name="served_by">served by :</string>
    <string name="time_produced">Time produced :</string>
    <string name="collection_area">Collection area :</string>
    <string name="collection_date">Collection date :</string>
    <string name="category_affected">Category affected :</string>
    <string name="vaccination_or_medication">Vacination or Medication :</string>
    <string name="disease_name">Disease name :</string>
    <string name="name_of_vaccine">Name of vaccine :</string>
    <string name="health_date">Health_date :</string>
    <string name="category_fed">Category Fed :</string>
    <string name="type_of_feed">Type of Feed :</string>
    <string name="feed_in_am">Feed in Am :</string>
    <string name="feed_in_noon">Feed in Noon :</string>
    <string name="feed_in_pm">Feed in Pm :</string>
    <string name="cost_of_feed">Cost of feed :</string>
    <string name="medical_expenses">Medical Expenses :</string>
    <string name="feeds_expenses">Feeds Expenses :</string>
    <string name="labour_expenses">Labour Expenses :</string>
    <string name="expenditure">Expenditure :</string>
    <string name="total_expenses">Total Expenses :</string>
    <string name="total_income">Total income :</string>
    <string name="selling_date">Selling date :</string>
    <string name="client_name">Client name :</string>
    <string name="client_phone">Client phone :</string>
    <string name="eggs_quantity">Eggs quantity :</string>
    <string name="eggs_price">Eggs Price :</string>
    <string name="total_amount">Total amount :</string>
    <string name="chicken_price">Chicken price :</string>
    <string name="chicken_quantity">Chicken quantity :</string>
    <string name="arrival_time">Arrival time :</string>
    <string name="employee_id">Employee Id :</string>
    <string name="gender_">Gender :</string>
    <string name="employee_name">Employee name :</string>
    <string name="employee_role">Employee role :</string>
    <string name="departure_time">Departure time :</string>
    <string name="Maintenance_expenses">Maintenance Expenses :</string>
    <string name="eggs_sale">Eggs sales :</string>
    <string name="meat_sales">Meat sales :</string>
    <string name="usage_expenses">"Usage : "</string>
    <string name="total_feed">"Feed Amount : "</string>
    <string name="purchase_date">Date Purchased :</string>
    <string name="total_trays">Total trays collected :</string>
    <string name="broken_eggs">No. of broken eggs :</string>
    <string name="good_eggs">No. of good eggs :</string>
    <string name="eggs_collected">No. of eggs collected :</string>
</resources>