<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blury_background"
    tools:context=".auth.RegistrationFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/dfs_logo"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomLogo"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toTopOf="@id/guidelineMrgTop"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regText"
        style="@style/h4"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomLogo"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottomReg"/>

    <TextView
        android:id="@+id/regToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regDesc"
        style="@style/h3"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomReg"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomLogin"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/firstName"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/fname"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomFname"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomLogin"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lastName"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/lname"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomLname"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toTopOf="@id/guidelineBottomFname"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomEmail"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toTopOf="@id/guidelineBottomLname"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/pass"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomPass"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toTopOf="@id/guidelineBottomEmail"
        tools:ignore="TextContrastCheck" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@drawable/blue_background"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomPass"
        app:layout_constraintBottom_toBottomOf="@id/guidelineMrgBottom"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

</androidx.constraintlayout.widget.ConstraintLayout>